--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -15,7 +15,7 @@
                         <h3 class="mb-4">Bienvenido al refugio</h3>
                     </div>
                     <form action="" method="post">
-                        {% csrf_token %}
+                        {#{% csrf_token %}#}
                         {{ form|crispy }}
                         <div class="d-grid">
                             <button class="btn btn-primary btn-lg" type="submit">Iniciar sesión</button>
