--- a/core/templates/registration/register.html
+++ b/core/templates/registration/register.html
@@ -13,7 +13,7 @@
                         <h3 class="mb-4">Registro de usuario</h3>
                     </div>
                     <form action="" method="post">
-                        {#{% csrf_token %}#}
+                        {% csrf_token %} 
                         {{ form|crispy }}
                         <div class="d-grid">
                             <button class="btn btn-primary btn-lg" type="submit">Registrarse</button>
